build/log/idf_py_stderr_output_20760
/home/pi/httptc/main/nvs_store.c: In function 'save_target_temp':
/home/pi/httptc/main/nvs_store.c:10:18: error: 'nvs' undeclared (first use in this function)
   10 |     nvs_set_blob(nvs, "settings", (void*)&(struct { float temp; int delay; }){target_temp, output_delay_ms}, sizeof(float) + sizeof(int));
      |                  ^~~
/home/pi/httptc/main/nvs_store.c:10:18: note: each undeclared identifier is reported only once for each function it appears in
/home/pi/httptc/main/nvs_store.c:10:79: error: 'target_temp' undeclared (first use in this function); did you mean 'save_target_temp'?
   10 |     nvs_set_blob(nvs, "settings", (void*)&(struct { float temp; int delay; }){target_temp, output_delay_ms}, sizeof(float) + sizeof(int));
      |                                                                               ^~~~~~~~~~~
      |                                                                               save_target_temp
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:108: esp-idf/main/CMakeFiles/__idf_main.dir/nvs_store.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/pi/httptc/main/httptc.c: In function 'app_main':
/home/pi/httptc/main/httptc.c:54:5: error: too few arguments to function 'load_target_temp'
   54 |     load_target_temp(&target_temp);
      |     ^~~~~~~~~~~~~~~~
In file included from /home/pi/httptc/main/httptc.c:3:
/home/pi/httptc/main/nvs_store.h:7:11: note: declared here
    7 | esp_err_t load_target_temp(float *temp,uint32_t *output_delay_ms);
      |           ^~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/httptc.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6135: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:149: all] Error 2
